fixed mobile alignment issues

--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -22,6 +22,12 @@
     font-size: 20px;
 }
 
+@media (min-width: 768px) and (max-width: 1023px) {
+    .logoDisplay {
+        display: none;
+    }
+}
+
 @media (min-width: 481px) and (max-width: 767px) {
     .searchInput {
         width: 100%;
@@ -29,6 +35,9 @@
         padding: 10px;
     }
     .navbar-toggle {
+        display: inline-block
+    }
+    .logoDisplay {
         display: none;
     }
 }
